Fix: background webkit-scrollbar-thumb

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -46,7 +46,7 @@ html {
   background: var(--onyx);
 }
 ::-webkit-scrollbar-thumb {
-  background-color: var(--gray-web);
+  background-color: var(--jet);
   border-radius: 6px;
   border: 3px solid var(--onyx);
 }
